added rent block

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,115 @@
             </div>
         </div>
     </section>
-   
+    <!-- Services -->
+    <section class="services">
+        <div class="container">
+            <div class="content__title">
+                Услуги
+            </div>
+            <div class="services__items">
+                <div class="services__item">
+                    <img src="img/rent-img.jpg" srcset="img/rent-img@2x.png 2x,
+                    img/rent-img@3x.png 3x" alt="">
+                    <div class="services__item-title">
+                        Аренда
+                    </div>
+                    <div class="services__item-text">
+                        Работаем как в комплексе с организацией свадьбы, так и отдельно.
+                    </div>
+                </div>
+                <div class="services__item">
+                    <img src="img/create-img.jpg" srcset="img/create-img@2x.jpg 2x,
+                    img/create-img@3x.jpg 3x" alt="">
+                    <div class="services__item-title">
+                        Аренда
+                    </div>
+                    <div class="services__item-text">
+                        Работаем как в комплексе с организацией свадьбы, так и отдельно.
+                    </div>
+                </div>
+                <div class="services__item">
+                    <img src="img/ready-img.jpg" srcset="img/ready-img@2x.png 2x,
+                    img/ready-img@3x.png 3x" alt="">
+                    <div class="services__item-title">
+                        Аренда
+                    </div>
+                    <div class="services__item-text">
+                        Работаем как в комплексе с организацией свадьбы, так и отдельно.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Rent -->
+    <section class="rent">
+        <div class="container">
+            <div class="content__title">
+                Аренда
+            </div>
+            <div class="rent__items">
+                <div class="rent__item">
+                    <img src="img/candy-img.png" srcset="img/candy-img@2x.png 2x,
+                    img/candy-img@3x.png 3x" class="Candy_Img" alt="">
+                    <div class="rent__item-name">
+                        Тележка кэндибар
+                    </div>
+                </div>
+                <div class="rent__item">
+                    <img src="img/donuts-img.png" srcset="img/donuts-img@2x.png 2x,
+             img/donuts-img@3x.png 3x" class="Donuts_Img">
+
+                    <div class="rent__item-name">
+                        Стенд для пончиков
+                    </div>
+                </div>
+                <div class="rent__item">
+                    <img src="img/egg-img.png" srcset="img/egg-img@2x.png 2x,
+             img/egg-img@3x.png 3x" class="Egg_Img" alt="">
+
+                    <div class="rent__item-name">
+                        Тележка-яйцо
+                    </div>
+                </div>
+                <div class="rent__item">
+                    <img src="img/telega-img.png" srcset="img/telega-img@2x.png 2x,
+             img/telega-img@3x.png 3x" class="Telega_Img" alt="">
+                    <div class="rent__item-name">
+                        Телега-прилавок
+                    </div>
+                </div>
+                <div class="rent__item">
+                    <img src="img/child-img.png" srcset="img/child-img@2x.png 2x,
+             img/child-img@3x.png 3x" class="Child_Img" alt="">
+                    <div class="rent__item-name">
+                        Детская розовая тележка
+                    </div>
+                </div>
+                <div class="rent__item">
+                    <img src="img/icecream-img.png" srcset="img/icecream-img@2x.png 2x,
+             img/icecream-img@3x.png 3x" class="Icecream_Img" alt="">
+                    <div class="rent__item-name">
+                        Стойка для мороженного
+                    </div>
+                </div>
+                <div class="rent__item">
+                    <img src="img/telegka-2-img.png" srcset="img/telegka-2-img@2x.png 2x,
+             img/telegka-2-img@3x.png 3x" class="Telegka2_Img" alt="">
+                    <div class="rent__item-name">
+                        Тележка с подставкой
+                    </div>
+                </div>
+                <div class="rent__item">
+                    <img src="img/photo-img.png" srcset="img/photo-img@2x.png 2x,
+             img/photo-img@3x.png 3x" class="Photo_Img" alt="">
+                    <div class="rent__item-name">
+                        Фотозона
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
