added complex,contacts blocks

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>J+A Decor</title>
+    <link rel="shortcut icon" href="img/brows-icon.ico">
     <link rel="stylesheet" href="css/libs.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -76,67 +78,231 @@
             </div>
             <div class="rent__items">
                 <div class="rent__item">
-                    <img src="img/candy-img.png" srcset="img/candy-img@2x.png 2x,
-                    img/candy-img@3x.png 3x" class="Candy_Img" alt="">
+                    <img src="img/candy-img.png" srcset="img/candy-img@2x.png 2x, img/candy-img@3x.png 3x"
+                        class="Candy_Img" alt="">
                     <div class="rent__item-name">
                         Тележка кэндибар
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/donuts-img.png" srcset="img/donuts-img@2x.png 2x,
-             img/donuts-img@3x.png 3x" class="Donuts_Img">
+                    <img src="img/donuts-img.png" srcset="img/donuts-img@2x.png 2x, img/donuts-img@3x.png 3x"
+                        class="Donuts_Img">
 
                     <div class="rent__item-name">
                         Стенд для пончиков
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/egg-img.png" srcset="img/egg-img@2x.png 2x,
-             img/egg-img@3x.png 3x" class="Egg_Img" alt="">
+                    <img src="img/egg-img.png" srcset="img/egg-img@2x.png 2x, img/egg-img@3x.png 3x" class="Egg_Img"
+                        alt="">
 
                     <div class="rent__item-name">
                         Тележка-яйцо
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/telega-img.png" srcset="img/telega-img@2x.png 2x,
-             img/telega-img@3x.png 3x" class="Telega_Img" alt="">
+                    <img src="img/telega-img.png" srcset="img/telega-img@2x.png 2x, img/telega-img@3x.png 3x"
+                        class="Telega_Img" alt="">
                     <div class="rent__item-name">
                         Телега-прилавок
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/child-img.png" srcset="img/child-img@2x.png 2x,
-             img/child-img@3x.png 3x" class="Child_Img" alt="">
+                    <img src="img/child-img.png" srcset="img/child-img@2x.png 2x, img/child-img@3x.png 3x"
+                        class="Child_Img" alt="">
                     <div class="rent__item-name">
                         Детская розовая тележка
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/icecream-img.png" srcset="img/icecream-img@2x.png 2x,
-             img/icecream-img@3x.png 3x" class="Icecream_Img" alt="">
+                    <img src="img/icecream-img.png" srcset="img/icecream-img@2x.png 2x, img/icecream-img@3x.png 3x"
+                        class="Icecream_Img" alt="">
                     <div class="rent__item-name">
                         Стойка для мороженного
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/telegka-2-img.png" srcset="img/telegka-2-img@2x.png 2x,
-             img/telegka-2-img@3x.png 3x" class="Telegka2_Img" alt="">
+                    <img src="img/telegka-2-img.png" srcset="img/telegka-2-img@2x.png 2x, img/telegka-2-img@3x.png 3x"
+                        class="Telegka2_Img" alt="">
                     <div class="rent__item-name">
                         Тележка с подставкой
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/photo-img.png" srcset="img/photo-img@2x.png 2x,
-             img/photo-img@3x.png 3x" class="Photo_Img" alt="">
+                    <img src="img/photo-img.png" srcset="img/photo-img@2x.png 2x, img/photo-img@3x.png 3x"
+                        class="Photo_Img" alt="">
                     <div class="rent__item-name">
                         Фотозона
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
+
+    <!-- Production -->
+
+    <section class="production">
+
+        <div class="production__wrapper">
+            <div class="production__info">
+                <div class="production__title">
+                    Изготовление
+                </div>
+                <div class="production__text">
+
+                    Если Вам понравились наши товары, мы можем изготовить специально для Вас изделие по индивидуальному
+                    заказу.
+                    <p> Для этого достаточно прислать картинку изделия Вашей мечты, и мы воплотим идею любого цвета,
+                        размера и дизайна. </p>
+                </div>
+            </div>
+
+            <div class="production__slider">
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='production__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+            </div>
+            <span class="production__slider-num"><span class="production__num">1</span>/10</span>
+        </div>
+    </section>
+
+    <!-- Complex -->
+
+    <section class="complex">
+        <div class="complex__wrapper">
+            <div class="complex__slider" dir="rtl">
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/img.png" alt="">
+                </div>
+
+            </div>
+            <span class="complex__slider-num"><span class="complex__num">1</span>/5</span>
+            <div class="complex__info">
+                <div class="complex__title">
+                    Комплексные предложения
+                </div>
+                <div class="complex__text">
+                    Для Вашего удобства мы разработали привлекательные комплексные предложения. <p> Вместе с тележками
+                        можно
+                        заказать кэндибар (сладкий стол), сырный стол, лимонад-бар или пончики.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contacts -->
+
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__info">
+                    <div class="contacts__title">
+                        Контакты
+                    </div>
+                    <div class="contacts__items">
+                        <div class="contact__item">
+                            <div class="contacts__item-title">
+                                Наш Адресс
+                            </div>
+                            <div class="contacts__item-text ">
+                                <a class="item__adress" target="_blank" href="https://goo.gl/maps/fZv9Dp61dSScSi6h9">
+                                    г. Санкт-Петербург, ул. Пушкина, 16
+                                </a>
+                            </div>
+                        </div>
+                        <div class="contact__item">
+                            <div class="contacts__item-title">
+                                Телефон
+                            </div>
+                            <div class="contacts__item-text ">
+                                <a class="item__tel" href="tel:+7921899919">+7 (921) 899-91-9</a>
+                            </div>
+                        </div>
+                        <div class="contact__item">
+                            <div class="contacts__item-title">
+                                Социальные сети
+                            </div>
+                            <div class="contacts__item-text ">
+                                <a class="item__instagram" target="_blank" href="https://www.instagram.com/jadecorspb/">
+                                    jadecorspb
+                                </a>
+                            </div>
+                        </div>
+                        <div class="contact__item">
+                            <div class="contacts__item-title">
+                                Почта
+                            </div>
+                            <div class="contacts__item-text ">
+                                <div class="contacts__email">
+                                    jadecor@mail.ru
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contacts__img">
+                    <img src="img/contact-img.JPG" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- Copyright -->
+
+    <div class="copyright">Copyright © 2019 Vladyslav Dmytrenko. All Rights Reverved. </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
