finished desktop version

--- a/app/index.html
+++ b/app/index.html
@@ -41,11 +41,13 @@
                     <img src="img/rent-img.jpg" srcset="img/rent-img@2x.png 2x,
                     img/rent-img@3x.png 3x" alt="">
                     <div class="services__item-title">
-                        Аренда
+                        Изготовление
                     </div>
                     <div class="services__item-text">
-                        Работаем как в комплексе с организацией свадьбы, так и отдельно.
+                        Мы можем изготовить специально для Вас изделие по индивидуальному
+                        заказу.
                     </div>
+
                 </div>
                 <div class="services__item">
                     <img src="img/create-img.jpg" srcset="img/create-img@2x.jpg 2x,
@@ -61,10 +63,10 @@
                     <img src="img/ready-img.jpg" srcset="img/ready-img@2x.png 2x,
                     img/ready-img@3x.png 3x" alt="">
                     <div class="services__item-title">
-                        Аренда
+                        Комплексные
                     </div>
                     <div class="services__item-text">
-                        Работаем как в комплексе с организацией свадьбы, так и отдельно.
+                        Для Вашего удобства мы разработали привлекательные комплексные предложения.
                     </div>
                 </div>
             </div>
@@ -159,37 +161,29 @@
 
             <div class="production__slider">
                 <div class='production__item'>
-                    <img src="img/img.png" alt="">
+                    <img src="img/candy_bar_arenda_spb.JPG" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/img.png" alt="">
+                    <img src="img/candy_bar_arenda_spb1.jpg" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/img.png" alt="">
+                    <img src="img/candy_bar_arenda_spb2.JPG" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/img.png" alt="">
+                    <img src="img/candy_bar_arenda_spb3.JPG" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/img.png" alt="">
+                    <img src="img/candy_bar_arenda_spb4.JPG" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/img.png" alt="">
+                    <img src="img/candy_bar_arenda_spb5.JPG" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/img.png" alt="">
+                    <img src="img/candy_bar_arenda_spb6.JPG" alt="">
                 </div>
-                <div class='production__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='production__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='production__item'>
-                    <img src="img/img.png" alt="">
-                </div>
+
             </div>
-            <span class="production__slider-num"><span class="production__num">1</span>/10</span>
+            <span class="production__slider-num"><span class="production__num">1</span>/7</span>
         </div>
     </section>
 
@@ -199,36 +193,20 @@
         <div class="complex__wrapper">
             <div class="complex__slider" dir="rtl">
                 <div class='complex__item'>
-                    <img src="img/img.png" alt="">
+                    <img src="img/candybar_minimouse.jpg" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/beluibar.jpg" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/bochka.JPG" alt="">
+                </div>
+                <div class='complex__item'>
+                    <img src="img/praznicbar.jpg" alt="">
                 </div>
                 <div class='complex__item'>
                     <img src="img/img.png" alt="">
                 </div>
-                <div class='complex__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='complex__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='complex__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='complex__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='complex__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='complex__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='complex__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-                <div class='complex__item'>
-                    <img src="img/img.png" alt="">
-                </div>
-
             </div>
             <span class="complex__slider-num"><span class="complex__num">1</span>/5</span>
             <div class="complex__info">
@@ -276,7 +254,7 @@
                                 Социальные сети
                             </div>
                             <div class="contacts__item-text ">
-                                <a class="item__instagram" target="_blank" href="https://www.instagram.com/jadecorspb/">
+                                <a class="item__instagram">
                                     jadecorspb
                                 </a>
                             </div>
@@ -299,7 +277,7 @@
             </div>
         </div>
     </section>
-<!-- Copyright -->
+    <!-- Copyright -->
 
     <div class="copyright">Copyright © 2019 Vladyslav Dmytrenko. All Rights Reverved. </div>
 
