changed 2nd slider,added full adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -9,27 +9,27 @@
     <link rel="shortcut icon" href="img/brows-icon.ico">
     <link rel="stylesheet" href="css/libs.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- Main -->
-    <section class="main">
-        <div class="main__wrapper">
-            <div class="main__bg-img">
-                <img src="img/main_page.jpg" alt="">
+   <section class="main">
+        <div class="main__inner">
+            <div class="main__title">
+                J+A Decor
             </div>
-            <div class="main__inner">
-                <div class="main__title">
-                    J+A Decor
-                </div>
-                <div class="main__text">
-                    Аренда и изготовление декора
-                </div>
+            <div class="main__text">
+                Аренда и изготовление декора
             </div>
         </div>
-    </section>
+        <div class="main__bg-img">
+            <img src="img/main_page.jpg" alt="">
+        </div>
+    </section> 
     <!-- Services -->
     <section class="services">
         <div class="container">
@@ -38,8 +38,8 @@
             </div>
             <div class="services__items">
                 <div class="services__item">
-                    <img src="img/rent-img.jpg" srcset="img/rent-img@2x.png 2x,
-                    img/rent-img@3x.png 3x" alt="">
+                    <img src="img/rent-img.jpg" srcset="img/rent-img@2x.jpg 2x,
+                    img/rent-img@3x.jpg 3x" alt="">
                     <div class="services__item-title">
                         Изготовление
                     </div>
@@ -60,8 +60,8 @@
                     </div>
                 </div>
                 <div class="services__item">
-                    <img src="img/ready-img.jpg" srcset="img/ready-img@2x.png 2x,
-                    img/ready-img@3x.png 3x" alt="">
+                    <img src="img/ready-img.jpg" srcset="img/ready-img@2x.jpg 2x,
+                    img/ready-img@3x.jpg 3x" alt="">
                     <div class="services__item-title">
                         Комплексные
                     </div>
@@ -71,9 +71,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
     <!-- Rent -->
-    <section class="rent">
+     <section class="rent">
         <div class="container">
             <div class="content__title">
                 Аренда
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
 
     <!-- Production -->
 
@@ -181,17 +181,15 @@
                 <div class='production__item'>
                     <img src="img/candy_bar_arenda_spb6.JPG" alt="">
                 </div>
-
             </div>
             <span class="production__slider-num"><span class="production__num">1</span>/7</span>
         </div>
     </section>
 
     <!-- Complex -->
-
     <section class="complex">
         <div class="complex__wrapper">
-            <div class="complex__slider" dir="rtl">
+            <div class="complex__slider">
                 <div class='complex__item'>
                     <img src="img/candybar_minimouse.jpg" alt="">
                 </div>
@@ -208,7 +206,7 @@
                     <img src="img/img.png" alt="">
                 </div>
             </div>
-            <span class="complex__slider-num"><span class="complex__num">1</span>/5</span>
+            <span class="complex__slider-num"><span class="complex__num">1</span>/7</span>
             <div class="complex__info">
                 <div class="complex__title">
                     Комплексные предложения
@@ -221,6 +219,9 @@
             </div>
         </div>
     </section>
+
+
+   
     <!-- Contacts -->
 
     <section class="contacts">
@@ -236,8 +237,8 @@
                                 Наш Адресс
                             </div>
                             <div class="contacts__item-text ">
-                                <a class="item__adress" target="_blank" href="https://goo.gl/maps/fZv9Dp61dSScSi6h9">
-                                    г. Санкт-Петербург, ул. Пушкина, 16
+                                <a class="item__adress" target="_blank" href="https://goo.gl/maps/SdbY3whHQ9aCSyiB7">
+                                    г. Санкт-Петербург, улица Камчатская,19
                                 </a>
                             </div>
                         </div>
@@ -279,7 +280,7 @@
     </section>
     <!-- Copyright -->
 
-    <div class="copyright">Copyright © 2019 Vladyslav Dmytrenko. All Rights Reverved. </div>
+    <!-- <div class="copyright">Copyright © 2019 Vladyslav Dmytrenko. All Rights Reverved.  </div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
