--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Main -->
-   <section class="main">
+    <section class="main">
         <div class="main__inner">
             <div class="main__title">
                 J+A Decor
@@ -27,7 +27,7 @@
         <div class="main__bg-img">
             <img src="img/main_page.jpg" alt="">
         </div>
-    </section> 
+    </section>
     <!-- Services -->
     <section class="services">
         <div class="container">
@@ -69,9 +69,9 @@
                 </div>
             </div>
         </div>
-    </section> 
+    </section>
     <!-- Rent -->
-     <section class="rent">
+    <section class="rent">
         <div class="container">
             <div class="content__title">
                 Аренда
@@ -137,7 +137,7 @@
                 </div>
             </div>
         </div>
-    </section> 
+    </section>
 
     <!-- Production -->
 
@@ -219,7 +219,7 @@
     </section>
 
 
-   
+
     <!-- Contacts -->
 
     <section class="contacts">
@@ -278,7 +278,9 @@
     </section>
     <!-- Copyright -->
 
-    <!-- <div class="copyright">Copyright © 2019 Vladyslav Dmytrenko. All Rights Reverved.  </div> -->
+    <div class="copyright">
+        Copyright © 2019 Vladyslav Dmytrenko. All Rights Reverved.
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
