--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="main__bg-img">
-            <img src="img/main_page.jpg" alt="">
+            <img src="img/main_PAGE.jpg" alt="">
         </div>
     </section>
     <!-- Services -->
