--- a/app/index.html
+++ b/app/index.html
@@ -42,8 +42,7 @@
                         Изготовление
                     </div>
                     <div class="services__item-text">
-                        Мы можем изготовить специально для Вас изделие по индивидуальному
-                        заказу.
+                        Мы можем изготовить специально для Вас изделие по индивидуальному заказу.
                     </div>
 
                 </div>
@@ -78,59 +77,51 @@
             </div>
             <div class="rent__items">
                 <div class="rent__item">
-                    <img src="img/candy-img.png" srcset="img/candy-img@2x.png 2x, img/candy-img@3x.png 3x"
-                        class="Candy_Img" alt="">
+                    <img src="img/candy-img.png" srcset="img/candy-img@2x.png 2x, img/candy-img@3x.png 3x" class="Candy_Img" alt="">
                     <div class="rent__item-name">
                         Тележка кэндибар
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/donuts-img.png" srcset="img/donuts-img@2x.png 2x, img/donuts-img@3x.png 3x"
-                        class="Donuts_Img">
+                    <img src="img/donuts-img.png" srcset="img/donuts-img@2x.png 2x, img/donuts-img@3x.png 3x" class="Donuts_Img">
 
                     <div class="rent__item-name">
                         Стенд для пончиков
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/egg-img.png" srcset="img/egg-img@2x.png 2x, img/egg-img@3x.png 3x" class="Egg_Img"
-                        alt="">
+                    <img src="img/egg-img.png" srcset="img/egg-img@2x.png 2x, img/egg-img@3x.png 3x" class="Egg_Img" alt="">
 
                     <div class="rent__item-name">
                         Тележка-яйцо
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/telega-img.png" srcset="img/telega-img@2x.png 2x, img/telega-img@3x.png 3x"
-                        class="Telega_Img" alt="">
+                    <img src="img/telega-img.png" srcset="img/telega-img@2x.png 2x, img/telega-img@3x.png 3x" class="Telega_Img" alt="">
                     <div class="rent__item-name">
                         Телега-прилавок
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/child-img.png" srcset="img/child-img@2x.png 2x, img/child-img@3x.png 3x"
-                        class="Child_Img" alt="">
+                    <img src="img/child-img.png" srcset="img/child-img@2x.png 2x, img/child-img@3x.png 3x" class="Child_Img" alt="">
                     <div class="rent__item-name">
                         Детская розовая тележка
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/icecream-img.png" srcset="img/icecream-img@2x.png 2x, img/icecream-img@3x.png 3x"
-                        class="Icecream_Img" alt="">
+                    <img src="img/icecream-img.png" srcset="img/icecream-img@2x.png 2x, img/icecream-img@3x.png 3x" class="Icecream_Img" alt="">
                     <div class="rent__item-name">
                         Стойка для мороженного
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/telegka-2-img.png" srcset="img/telegka-2-img@2x.png 2x, img/telegka-2-img@3x.png 3x"
-                        class="Telegka2_Img" alt="">
+                    <img src="img/telegka-2-img.png" srcset="img/telegka-2-img@2x.png 2x, img/telegka-2-img@3x.png 3x" class="Telegka2_Img" alt="">
                     <div class="rent__item-name">
                         Тележка с подставкой
                     </div>
                 </div>
                 <div class="rent__item">
-                    <img src="img/photo-img.png" srcset="img/photo-img@2x.png 2x, img/photo-img@3x.png 3x"
-                        class="Photo_Img" alt="">
+                    <img src="img/photo-img.png" srcset="img/photo-img@2x.png 2x, img/photo-img@3x.png 3x" class="Photo_Img" alt="">
                     <div class="rent__item-name">
                         Фотозона
                     </div>
@@ -150,34 +141,32 @@
                 </div>
                 <div class="production__text">
 
-                    Если Вам понравились наши товары, мы можем изготовить специально для Вас изделие по индивидуальному
-                    заказу.
-                    <p> Для этого достаточно прислать картинку изделия Вашей мечты, и мы воплотим идею любого цвета,
-                        размера и дизайна. </p>
+                    Если Вам понравились наши товары, мы можем изготовить специально для Вас изделие по индивидуальному заказу.
+                    <p> Для этого достаточно прислать картинку изделия Вашей мечты, и мы воплотим идею любого цвета, размера и дизайна. </p>
                 </div>
             </div>
 
             <div class="production__slider">
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb.JPG" alt="">
+                    <img src="img/candy_bar_arenda_spb.jpg" alt="">
                 </div>
                 <div class='production__item'>
                     <img src="img/candy_bar_arenda_spb1.jpg" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb2.JPG" alt="">
+                    <img src="img/candy_bar_arenda_spb2.jpg" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb3.JPG" alt="">
+                    <img src="img/candy_bar_arenda_spb3.jpg" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb4.JPG" alt="">
+                    <img src="img/candy_bar_arenda_spb4.jpg" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb5.JPG" alt="">
+                    <img src="img/candy_bar_arenda_spb5.jpg" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb6.JPG" alt="">
+                    <img src="img/candy_bar_arenda_spb6.jpg" alt="">
                 </div>
             </div>
             <span class="production__slider-num"><span class="production__num">1</span>/7</span>
@@ -195,7 +184,7 @@
                     <img src="img/beluibar.jpg" alt="">
                 </div>
                 <div class='complex__item'>
-                    <img src="img/bochka.JPG" alt="">
+                    <img src="img/bochka.jpg" alt="">
                 </div>
                 <div class='complex__item'>
                     <img src="img/praznicbar.jpg" alt="">
@@ -210,9 +199,8 @@
                     Комплексные предложения
                 </div>
                 <div class="complex__text">
-                    Для Вашего удобства мы разработали привлекательные комплексные предложения. <p> Вместе с тележками
-                        можно
-                        заказать кэндибар (сладкий стол), сырный стол, лимонад-бар или пончики.</p>
+                    Для Вашего удобства мы разработали привлекательные комплексные предложения.
+                    <p> Вместе с тележками можно заказать кэндибар (сладкий стол), сырный стол, лимонад-бар или пончики.</p>
                 </div>
             </div>
         </div>
@@ -271,7 +259,7 @@
                     </div>
                 </div>
                 <div class="contacts__img">
-                    <img src="img/contact-img.JPG" alt="">
+                    <img src="img/contact-img.jpg" alt="">
                 </div>
             </div>
         </div>
