--- a/app/index.html
+++ b/app/index.html
@@ -148,22 +148,22 @@
 
             <div class="production__slider">
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb.jpg" alt="">
+                    <img src="img/candy_bar_arenda_spb.JPG" alt="">
                 </div>
                 <div class='production__item'>
                     <img src="img/candy_bar_arenda_spb1.jpg" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb2.jpg" alt="">
+                    <img src="img/candy_bar_arenda_spb2.JPG" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb3.jpg" alt="">
+                    <img src="img/candy_bar_arenda_spb3.JPG" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb4.jpg" alt="">
+                    <img src="img/candy_bar_arenda_spb4.JPG" alt="">
                 </div>
                 <div class='production__item'>
-                    <img src="img/candy_bar_arenda_spb5.jpg" alt="">
+                    <img src="img/candy_bar_arenda_spb5.JPG" alt="">
                 </div>
                 <div class='production__item'>
                     <img src="img/candy_bar_arenda_spb6.jpg" alt="">
@@ -184,7 +184,7 @@
                     <img src="img/beluibar.jpg" alt="">
                 </div>
                 <div class='complex__item'>
-                    <img src="img/bochka.jpg" alt="">
+                    <img src="img/bochka.JPG" alt="">
                 </div>
                 <div class='complex__item'>
                     <img src="img/praznicbar.jpg" alt="">
@@ -259,7 +259,7 @@
                     </div>
                 </div>
                 <div class="contacts__img">
-                    <img src="img/contact-img.jpg" alt="">
+                    <img src="img/contact-img.JPG" alt="">
                 </div>
             </div>
         </div>
